--- a/src/main/graphic_elements/PlayingScreen.fxml
+++ b/src/main/graphic_elements/PlayingScreen.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.effect.BoxBlur?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane fx:id="PlayingScreen" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="PlayingScreen" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="604.0" fitWidth="611.0" layoutY="-179.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -44,14 +38,14 @@
             <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="227.0" layoutY="339.0" mnemonicParsing="false" text="Conferma" textFill="#3b972b">
+      <Button layoutX="227.0" layoutY="339.0" mnemonicParsing="false" text="Conferma" textFill="#358627">
          <font>
-            <Font name="Myanmar Sangam MN" size="12.0" />
+            <Font name="Noteworthy Light" size="17.0" />
          </font>
       </Button>
       <Button layoutX="441.0" layoutY="360.0" minHeight="21.0" minWidth="42.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="21.0" text="Ok">
          <font>
-            <Font name="Gujarati Sangam MN" size="13.0" />
+            <Font name="Noteworthy Light" size="14.0" />
          </font>
       </Button>
       <AnchorPane layoutX="359.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
