--- a/src/main/graphic_elements/testStart.fxml
+++ b/src/main/graphic_elements/testStart.fxml
@@ -26,7 +26,7 @@
             </ImageView>
             <Button fx:id="ConfirmButton" layoutX="258.0" layoutY="176.0" mnemonicParsing="false" onAction="#ConfermaScelta" prefHeight="29.0" prefWidth="74.0" text="Conferma">
                <font>
-                  <Font name="Ravie" size="12.0" />
+                  <Font name="Noteworthy Light" size="12.0" />
                </font>
             </Button>
             <TextField fx:id="TextField" layoutX="80.0" layoutY="143.0" onAction="#GetText" prefHeight="33.0" prefWidth="438.0" style="-fx-background-color: white;">
@@ -36,9 +36,9 @@
             </TextField>
             <AnchorPane layoutX="80.0" layoutY="118.0" prefHeight="23.0" prefWidth="451.0">
                <children>
-                  <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-text-origin: CENTER;" text="INSERISCI IL TUO NICKNAME">
+                  <Text fill="#750505" layoutX="143.0" layoutY="11.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-text-origin: CENTER;" text="INSERISCI IL TUO NICKNAME" wrappingWidth="184.84500122070312">
                      <font>
-                        <Font name="Ravie" size="12.0" />
+                        <Font name="Noteworthy Light" size="12.0" />
                      </font>
                   </Text>
                </children>
