--- a/src/main/graphic_elements/EndgameScene.fxml
+++ b/src/main/graphic_elements/EndgameScene.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.ControllerGraphic">
+<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -31,7 +31,7 @@
                   <Image url="@/GraphicResources/Publisher material/Title 2000x618px.png" />
                </image>
             </ImageView>
-            <TextArea blendMode="MULTIPLY" editable="false" layoutY="94.0" prefHeight="306.0" prefWidth="300.0" promptText="Ranking" text="CLASSIFICA&#10;1: Giocatore1&#10;   Punteggio: 10&#10;2: Giocatore2&#10;   Punteggio: 9&#10;3: Giocatore3&#10;   Punteggio: 8&#10;4: Giocatore4&#10;   Punteggio: 7">
+            <TextArea blendMode="MULTIPLY" editable="false" layoutY="94.0" prefHeight="306.0" prefWidth="300.0" promptText="Ranking" text="#textArea2">
                <font>
                   <Font name="Ravie" size="20.0" />
                </font>
@@ -45,7 +45,7 @@
                   <Image url="@/GraphicResources/misc/base_pagina2.jpg" />
                </image>
             </ImageView>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="312.0" prefWidth="302.0" text="Congratulazioni Giocatore1, hai vinto!" textAlignment="CENTER" textFill="#efd393" textOverrun="CLIP" wrapText="true">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="312.0" prefWidth="302.0" text="#textArea2" textAlignment="CENTER" textFill="#efd393" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font name="Ravie" size="24.0" />
                </font>
