--- a/src/main/graphic_elements/PlayingScreen.fxml
+++ b/src/main/graphic_elements/PlayingScreen.fxml
@@ -20,7 +20,7 @@
       </ImageView>
       <ImageView fitHeight="72.0" fitWidth="83.0" layoutX="21.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="76.0" fitWidth="124.0" layoutX="452.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <GridPane fx:id="selected" layoutX="40.0" layoutY="328.0" prefHeight="47.0" prefWidth="158.0">
+      <GridPane fx:id="selectedGrid" layoutX="40.0" layoutY="328.0" prefHeight="47.0" prefWidth="158.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,12 +38,12 @@
             <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" />
          </children>
       </GridPane>
-      <Button fx:id="confirmButton" layoutX="227.0" layoutY="339.0" mnemonicParsing="false" onAction="#confirmSelection" text="Conferma" textFill="#358627">
+      <Button fx:id="confirmSelectionButton" layoutX="227.0" layoutY="339.0" mnemonicParsing="false" onAction="#confirmSelection" text="Conferma" textFill="#358627">
          <font>
             <Font name="Noteworthy Light" size="17.0" />
          </font>
       </Button>
-      <Button layoutX="441.0" layoutY="360.0" minHeight="21.0" minWidth="42.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="21.0" text="Ok">
+      <Button fx:id="confirmInsertButton" layoutX="441.0" layoutY="360.0" minHeight="21.0" minWidth="42.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="21.0" onAction="#confirmInsert" text="Ok" visible="false">
          <font>
             <Font name="Noteworthy Light" size="14.0" />
          </font>
@@ -108,10 +108,10 @@
          </children>
       </AnchorPane>
       <ImageView fitHeight="72.0" fitWidth="83.0" layoutX="113.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="332.0" layoutY="321.0" mnemonicParsing="false" text="0" />
-      <Button layoutX="386.0" layoutY="321.0" mnemonicParsing="false" text="1" />
-      <Button layoutX="441.0" layoutY="321.0" mnemonicParsing="false" text="2" />
-      <Button layoutX="494.0" layoutY="321.0" mnemonicParsing="false" text="3" />
-      <Button layoutX="549.0" layoutY="321.0" mnemonicParsing="false" text="4" />
+      <Button layoutX="332.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn0" text="0" />
+      <Button layoutX="386.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn1" text="1" />
+      <Button layoutX="441.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn2" text="2" />
+      <Button layoutX="494.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn3" text="3" />
+      <Button layoutX="549.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn4" text="4" />
    </children>
 </Pane>
