--- a/src/main/graphic_elements/PlayingScreen.fxml
+++ b/src/main/graphic_elements/PlayingScreen.fxml
@@ -20,7 +20,7 @@
       </ImageView>
       <ImageView fitHeight="72.0" fitWidth="83.0" layoutX="21.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="76.0" fitWidth="124.0" layoutX="452.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <GridPane fx:id="selectedGrid" layoutX="40.0" layoutY="328.0" prefHeight="47.0" prefWidth="158.0">
+      <GridPane fx:id="selectedGrid" gridLinesVisible="true" layoutX="40.0" layoutY="328.0" prefHeight="47.0" prefWidth="158.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,14 +29,6 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <effect>
-            <BoxBlur />
-         </effect>
-         <children>
-            <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="0"/>
-            <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" />
-         </children>
       </GridPane>
       <Button fx:id="confirmSelectionButton" layoutX="227.0" layoutY="339.0" mnemonicParsing="false" onAction="#confirmSelection" text="Conferma" textFill="#358627">
          <font>
@@ -108,10 +100,10 @@
          </children>
       </AnchorPane>
       <ImageView fitHeight="72.0" fitWidth="83.0" layoutX="113.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="332.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn0" text="0" />
-      <Button layoutX="386.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn1" text="1" />
-      <Button layoutX="441.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn2" text="2" />
-      <Button layoutX="494.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn3" text="3" />
-      <Button layoutX="549.0" layoutY="321.0" mnemonicParsing="false" onAction="#setColumn4" text="4" />
+      <Button layoutX="380.0" layoutY="300.0" mnemonicParsing="false" text="0" />
+      <Button layoutX="414.0" layoutY="300.0" mnemonicParsing="false" text="1" />
+      <Button layoutX="446.0" layoutY="300.0" mnemonicParsing="false" text="2" />
+      <Button layoutX="480.0" layoutY="300.0" mnemonicParsing="false" text="3" />
+      <Button layoutX="514.0" layoutY="300.0" mnemonicParsing="false" text="4" />
    </children>
 </Pane>
