--- a/src/main/graphic_elements/PlayingScreen.fxml
+++ b/src/main/graphic_elements/PlayingScreen.fxml
@@ -30,7 +30,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Button fx:id="confirmSelectionButton" layoutX="227.0" layoutY="339.0" mnemonicParsing="false" onAction="#confirmSelection" text="Conferma" textFill="#358627">
+      <Button fx:id="confirmSelectionButton" layoutX="227.0" layoutY="339.0" mnemonicParsing="false" onAction="#confirmSelection" text="Ordina" textFill="#358627">
          <font>
             <Font name="Noteworthy Light" size="17.0" />
          </font>
@@ -100,10 +100,10 @@
          </children>
       </AnchorPane>
       <ImageView fitHeight="72.0" fitWidth="83.0" layoutX="113.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="380.0" layoutY="300.0" mnemonicParsing="false" text="0" />
-      <Button layoutX="414.0" layoutY="300.0" mnemonicParsing="false" text="1" />
-      <Button layoutX="446.0" layoutY="300.0" mnemonicParsing="false" text="2" />
-      <Button layoutX="480.0" layoutY="300.0" mnemonicParsing="false" text="3" />
-      <Button layoutX="514.0" layoutY="300.0" mnemonicParsing="false" text="4" />
+      <Button fx:id="insertIn0" layoutX="380.0" layoutY="300.0" mnemonicParsing="false" onAction="#setColumn0" text="0" visible="false"/>
+      <Button fx:id="insertIn1" layoutX="414.0" layoutY="300.0" mnemonicParsing="false" onAction="#setColumn1" text="1" visible="false"/>
+      <Button fx:id="insertIn2" layoutX="446.0" layoutY="300.0" mnemonicParsing="false" onAction="#setColumn2" text="2" visible="false"/>
+      <Button fx:id="insertIn3" layoutX="480.0" layoutY="300.0" mnemonicParsing="false" onAction="#setColumn3" text="3" visible="false"/>
+      <Button fx:id="insertIn4" layoutX="514.0" layoutY="300.0" mnemonicParsing="false" onAction="#setColumn4" text="4" visible="false"/>
    </children>
 </Pane>
