--- a/src/main/graphic_elements/PlayingScreen.fxml
+++ b/src/main/graphic_elements/PlayingScreen.fxml
@@ -31,7 +31,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Button fx:id="confirmSelectionButton" layoutX="362.0" layoutY="657.0" mnemonicParsing="false" onAction="#confirmSelection" prefHeight="76.0" prefWidth="146.0" text="Conferma" textFill="#358627">
+      <Button fx:id="confirmSelectionButton" layoutX="362.0" layoutY="657.0" mnemonicParsing="false" onAction="#confirmSelection" prefHeight="76.0" prefWidth="146.0" text="Ordina" textFill="#358627">
          <font>
             <Font name="Noteworthy Light" size="25.0" />
          </font>
@@ -103,26 +103,26 @@
          <image>
             <Image url="@GraphicResources/common%20goal%20cards/10.jpg" />
          </image></ImageView>
-      <Button fx:id="insertIn0" layoutX="831.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn0" text="0">
+      <Button fx:id="insertIn0" layoutX="831.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn0" text="0" visible="false">
          <font>
             <Font size="25.0" />
          </font></Button>
-       <Button fx:id="insertIn1" layoutX="899.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn1" text="1">
+       <Button fx:id="insertIn1" layoutX="899.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn1" text="1" visible="false">
            <font>
                <Font size="25.0" />
            </font>
        </Button>
-       <Button fx:id="insertIn2" layoutX="975.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn2" text="2">
+       <Button fx:id="insertIn2" layoutX="975.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn2" text="2" visible="false">
            <font>
                <Font size="25.0" />
            </font>
        </Button>
-       <Button fx:id="insertIn3" layoutX="1048.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn3" text="3">
+       <Button fx:id="insertIn3" layoutX="1048.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn3" text="3" visible="false">
            <font>
                <Font size="25.0" />
            </font>
        </Button>
-       <Button fx:id="insertIn4" layoutX="1123.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn4" text="4">
+       <Button fx:id="insertIn4" layoutX="1123.0" layoutY="631.0" minWidth="53.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="53.0" onAction="#setColumn4" text="4" visible="false">
            <font>
                <Font size="25.0" />
            </font>
