--- a/src/main/graphic_elements/testStart.fxml
+++ b/src/main/graphic_elements/testStart.fxml
@@ -41,7 +41,7 @@
                   <Font name="Noteworthy Light" size="36.0" />
                </font>
             </Text>
-            <TextArea layoutX="-1.0" layoutY="733.0" prefHeight="37.0" prefWidth="1070.0">
+            <TextArea fx:id="nickErrorArea" layoutX="-1.0" layoutY="733.0" prefHeight="37.0" prefWidth="1070.0" editable="false">
                <effect>
                   <ColorInput />
                </effect></TextArea>
